refactor: simplify prompt flows and standardize Java 25 code